# negotitation-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: hybrid_agent.py  networks.py  ppo_agent.py
agents/continual/: clear.py  ewc.py  regime_change.py
agents/llm/: __init__.py  ollama_client.py  prompts.py  strategist.py
agents/memory/: episodic_memory.py  replay_buffer.py  transformer_memory.py
analysis/: logger.py  metrics.py
api/: schemas.py  server.py  websocket_manager.py
api/routes/: history.py  simulation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: NationPanel.tsx  RelationshipGraph.tsx  ScenarioInjector.tsx  Timeline.tsx  WorldMap.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/store/: simulationStore.ts
scripts/: evaluate.py  train_hybrid.py  train_phase1.py  train_phase2.py
tests/emergence/: test_emergent_behaviors.py
tests/integration/: test_env_api_compliance.py
tests/unit/: test_action_space.py  test_continual_learning.py  test_dynamics.py  test_hybrid_agent.py  test_nation_state.py  test_reward.py
training/: curriculum.py  distributed.py  evaluator.py  ippo_trainer.py  runner.py
world/: action_space.py  geopolitical_env.py  nation_state.py  observation_space.py  reward.py
world/dynamics/: diplomacy.py  internal.py  military.py  shocks.py  trade.py
