[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "negotiation-agents"
version = "0.1.0"
description = "Geopolitical Multi-Agent RL Simulation"
requires-python = ">=3.11"
dependencies = [
    "pettingzoo>=1.24.0",
    "gymnasium>=0.29.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
phase3 = [
    "ray[default]>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
